--- a/mvc-node/src/views/users.hbs
+++ b/mvc-node/src/views/users.hbs
@@ -29,7 +29,7 @@
 	</form>
 	<h2>Users list</h2>
 	{{#each users}}
-		<div style="border: 1px solid green; padding: 15px;">
+		<div style="border: 1px solid green; padding: 15px; margin-bottom: 10px; width: 300px;">
 			<h3>Username: {{this.username}} </h3>
 			<p>Age: {{this.age}} </p>
 			<button>Delete</button>
